[project]
name = "hydra-strategy"
version = "0.1.0"
description = ""
authors = [
    {name = "balo",email = "balo@alexandria.pc"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel (==6.29.5)",
    "yappi (>=1.6.10,<2.0.0)",
    "snakeviz (>=2.2.2,<3.0.0)",
    "lumibot @ git+https://github.com/balojey/lumibot.git",
    "ta (>=0.11.0,<0.12.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
